admission/ValidatingAdmissionPolicy/policies/selinux-type/ephemeralcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: selinux-type-ephemeralcontainers
  annotations:
    security.kubeapt.io/displayName: 'Selinux Type'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for selinux-type/ephemeralcontainers.
    security.kubeapt.io/resource: Ephemeralcontainers
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the selinux-type/ephemeralcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: c7fc514c-62c7-5d26-81e1-ef742402f859
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-type-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    selinux-type-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    selinux-type-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  variables:
    - name: allowedSELinuxTypes
      expression: >
        ["container_t","container_init_t","container_kvm_t","container_engine_t"]
  validations:
    - expression: >
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          !has(ec.securityContext) ||
          !has(ec.securityContext.seLinuxOptions) ||
          !has(ec.securityContext.seLinuxOptions.type) ||
          ec.securityContext.seLinuxOptions.type == "" ||
          variables.allowedSELinuxTypes.exists(t, t == ec.securityContext.seLinuxOptions.type)
        )
      message: >
        spec.ephemeralContainers[*].securityContext.seLinuxOptions.type must be undefined, empty (""), or one of: container_t, container_init_t, container_kvm_t, container_engine_t.
